Updated message definitions
